<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_csl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/activity_main_rag_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_main_txv_chose_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chose_resolution"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/activity_main_rab_9bit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resolution_9_bit"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/activity_main_rab_12bit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolution_12_bit"
            android:textColor="@color/black" />

    </RadioGroup>

    <TextView
        android:id="@+id/activity_main_txv_high_byte_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/high_byte_label"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_txv_low_byte_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_rag_0" />

    <TextView
        android:id="@+id/activity_main_txv_low_byte_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/low_byte_label"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_main_txv_high_byte_label"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_rag_0" />

    <EditText
        android:id="@+id/activity_main_etx_high_byte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_etx_low_byte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txv_high_byte_label" />

    <EditText
        android:id="@+id/activity_main_etx_low_byte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_main_etx_high_byte"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txv_low_byte_label" />

    <TextView
        android:id="@+id/activity_main_txv_result_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_txv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_etx_high_byte" />

    <TextView
        android:id="@+id/activity_main_txv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/digital7"
        android:text="@string/default_result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txv_result_label" />

</androidx.constraintlayout.widget.ConstraintLayout>